comment functions in js files and fix alignment of visualizations

--- a/style.css
+++ b/style.css
@@ -9,148 +9,8 @@ h1, h2, h3 {
 	line-height: 1.2
 }
 
-/* bar in the stations bar chart */
-.bar {
-	fill: #7570B3;
-}
-
-/* the selected data points in the scatterplot */
-.selected {
-	fill: purple;
-	stroke: purple;
-}
-
-/* the data points on the scatterplot */
-circle {
-	fill: white;
-	stroke: #0571b0;
-	stroke-width: 5;
-	r: 5;
-}
-
-.demographics {
-	width: 1600px;
-}
-
-/* styling for the visualization annotations */
-.vis-explanation {
-	font-size: 14px;
-	margin-left: 100px;
-	margin-right: 100px;
-}
-
-.svg-vis-demographics-line {
-	margin: auto
-}
-
-/* the gender double bar chart */
-#gender {
-	display: block;
-	margin-left: 105px;
-}
-
-/* the membership double bar chart */
-#users {
-	display: block;
-	margin-left: 105px;
-}
-
-/* tooltip on stations bar charts */
-.toolTip {
-  position: absolute;
-  text-align: center;
-  max-width: 120px;
-  max-height: 65px;
-  padding: 8px;
-  border: none;
-  border-radius: 8px;
-  margin-top: -30px;
-  font: 12px sans-serif;
-  background: black;
-  color: white;
-  pointer-events: none;
-}
-
-/* formatting the leaflet map */
-#map {
-	height: 300px;
-    width: 1000px;
-    margin: auto;
-    display: block;
-}
-
-/* end trip bar chart */
-#chester_square_end_trips {
-	display: none;
-	margin: 105px;
-}
-
-/* start trip bar chart */
-#chester_square_start_trips {
-	margin: 105px;
-	display: block;
-}
-
-/* button to toggle between start and end */
-.trip-toggle-button {
-    position: absolute;
-    right: 0;
-    left: 80%;	
-	color: #fff !important;
-	text-transform: uppercase;
-	text-decoration: none;
-	background: black;
-	padding: 20px;
-	border-radius: 5px;
-	display: inline-block;
-	border: none;
-	transition: all 0.4s ease 0s;
-}
-
-.trip-toggle-button:hover {
-	background: #0571b0;
-	letter-spacing: 1px;
-	-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-	-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-	box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
-	transition: all 0.4s ease 0s;
-}
-
-.trip-toggle-button:active {
-	 color:#BBBBBB;
-	 border-color:#BBBBBB;
-}
-
-/* formatting the stations bar charts */
-.hourly-trips {
-	margin: auto;
-	position: relative;
-}
-
-/* Your text should be in a nice narrow column */
-.content-column {
-	max-width: 650px;
-	margin: 40px auto;
-}
-
-/* But your visualization should be full-width and full-height */
-.vis-holder {
-  width: 1200;
-  height: 800;
-}
-
-/* line chart representing data from all Boston stations */
-.dataLine {
-	stroke: red;
-	stroke-width: 5px;
-	fill: none;
-}
-
-/* age line chart */
-.linePath {
-	stroke: #0571b0;
-	fill: none;
-	stroke-width: 5px;
+em {
+	font-style: normal;
 }
 
 /* Fork on GitHub ribbon via https://codepo8.github.io/css-fork-on-github-ribbon/# */  
@@ -194,4 +54,149 @@ circle {
 		height:200px;
 		/*z-index:9999;*/
 	}
+}
+
+/* Styling for the stations bar chart */
+.bar {
+	fill: #7570B3;
+}
+
+/* Styling for the selected data points in the scatterplot */
+.selected {
+	fill: purple;
+	stroke: purple;
+}
+
+circle {
+	fill: white;
+	stroke: #0571b0;
+	stroke-width: 5;
+	r: 5;
+}
+
+/* Styling for the div holder for the 3 demographic charts */
+.demographics {
+	width: 1600px;
+}
+
+/* Styling for the visualization annotations */
+.vis-explanation {
+	font-size: 14px;
+	margin-left: 100px;
+	margin-right: 100px;
+}
+
+/* Styling for the age demographic line chart */
+.svg-vis-demographics-line {
+	margin: auto
+}
+
+/* Styling for the gender double bar chart */
+#gender {
+	display: block;
+	margin-left: 105px;
+}
+
+/* Styling for the membership double bar chart */
+#users {
+	display: block;
+	margin-left: 105px;
+}
+
+/* Styling for the tooltip on stations bar charts */
+.toolTip {
+  position: absolute;
+  text-align: center;
+  max-width: 120px;
+  max-height: 65px;
+  padding: 8px;
+  border: none;
+  border-radius: 8px;
+  margin-top: -30px;
+  font: 12px sans-serif;
+  background: black;
+  color: white;
+  pointer-events: none;
+}
+
+/* Styling for leaflet map */
+#map {
+	height: 300px;
+    width: 1000px;
+    margin: auto;
+    display: block;
+}
+
+/* Styling for the ending stations bar chart */
+#chester_square_end_trips {
+	display: none;
+	margin: 105px;
+}
+
+/* Styling for the starting stations bar chart */
+#chester_square_start_trips {
+	margin: 105px;
+	display: block;
+}
+
+/* Styling for the stations toggle button */
+.trip-toggle-button {
+    position: absolute;
+    right: 0;
+    left: 80%;	
+	color: #fff !important;
+	text-transform: uppercase;
+	text-decoration: none;
+	background: black;
+	padding: 20px;
+	border-radius: 5px;
+	display: inline-block;
+	border: none;
+	transition: all 0.4s ease 0s;
+}
+
+.trip-toggle-button:hover {
+	background: #0571b0;
+	letter-spacing: 1px;
+	-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+	-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+	box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+	transition: all 0.4s ease 0s;
+}
+
+.trip-toggle-button:active {
+	 color:#BBBBBB;
+	 border-color:#BBBBBB;
+}
+
+/* formatting the stations bar charts */
+.hourly-trips {
+	margin: auto;
+	position: relative;
+}
+
+/* Your text should be in a nice narrow column */
+.content-column {
+	max-width: 650px;
+	margin: 40px auto;
+}
+
+/* But your visualization should be full-width and full-height */
+.vis-holder {
+	max-width: 1500px;
+	margin: 40px auto;
+}
+
+/* line chart representing data from all Boston stations */
+.dataLine {
+	stroke: red;
+	stroke-width: 5px;
+	fill: none;
+}
+
+/* age line chart */
+.linePath {
+	stroke: #0571b0;
+	fill: none;
+	stroke-width: 5px;
 }
